set word-wrap:brak-word to fix li text overflow

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,11 @@ h2{
     width: 22rem;
     padding: 1rem;
     border-radius: 0.5rem;
+}
+
+.endor-list{
     list-style-type: none;
+    background-color: white;
 }
 
 .endorsements-container.hide{
@@ -110,6 +114,7 @@ h2{
 
 .endorsement{
     background-color: rgb(240, 239, 239);
+    width: 100%;
     color: black;
     border-radius: 0.5rem;
     margin-bottom: 1rem;
@@ -125,12 +130,12 @@ h2{
 }
 
 .endor-text{
-    width: 100%;
     padding: 1rem;
     font-size: 1rem;
     background-color: rgb(240, 239, 239);
     color: black;
     margin-bottom: 1.5rem;
+    word-wrap : break-word;
 }
 
 .endor-from{
